--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,14 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+  <div id="head_element">
+    <h1 id="Logo_Name">Maple Swap</h1>
+    <div id="head_image">
+      <img id="maple_leaf" src="images/logo.png" alt="Maple Leaf" />
+      <p id="tagline">Buy Canada Proud</p>
+    </div>
+
+  </div>
   <!-- Top bar with search input and settings button -->
   <div id="top-bar">
     <input type="text" id="searchInput" placeholder="Search product..." />
