--- a/popup.html
+++ b/popup.html
@@ -12,43 +12,48 @@
       <img id="maple_leaf" src="images/logo.png" alt="Maple Leaf" />
       <p id="tagline">Buy Canada Proud</p>
     </div>
-
   </div>
-  <!-- Top bar with search input and settings button -->
+
   <div id="top-bar">
     <input type="text" id="searchInput" placeholder="Search product..." />
-    <button id="searchBtn" title="Search">&#128269;</button>
-    <button id="settingsBtn" title="Settings">&#9881;</button>
+    <button id="searchBtn" title="Search">🔍</button>
+    <button id="settingsBtn" title="Settings">⚙</button>
   </div>
-  <!-- Results section (hidden by default) -->
+
   <div id="resultSection" style="display:none;">
     <div id="productInfo">
       <img id="productImage" src="" alt="Product image" />
       <div id="productDetails">
         <h2 id="productName"></h2>
-        <p id="productOrigin"></p>
       </div>
     </div>
-    <!-- Status message for Canadian product or no alternatives -->
+
+    <p id="productOrigin"></p>
     <p id="statusMessage" style="display:none;"></p>
-    <!-- Alternatives and suggestions lists -->
+
     <div id="alternativesContainer">
       <h3>Canadian Alternatives</h3>
+      <div class="scroll-controls">
+        <button class="scroll-btn left" title="Scroll left">←</button>
+        <button class="scroll-btn right" title="Scroll right">→</button>
+      </div>
       <div id="altList" class="card-list"></div>
     </div>
+
     <div id="suggestionsContainer">
       <h3>User Suggestions</h3>
       <div id="suggestionList" class="card-list"></div>
     </div>
-    <!-- Detailed info about the selected Canadian alternative -->
+
     <div id="alternativeInfo">
       <h2 id="alternativeName"></h2>
       <p id="alternativeStory"></p>
       <ul id="alternativeMetrics"></ul>
       <p id="categoryFact" class="fact"></p>
+      <a id="buyNow" class="buy-button" href="#" target="_blank">Buy Now</a>
     </div>
   </div>
-  <!-- Message box for errors or no results -->
+
   <div id="message" style="display:none;"></div>
   <script src="popup.js"></script>
 </body>
