--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Canadian Alternatives</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Frijole&family=Gravitas+One&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+    <div>
   <div id="head_element">
-    <h1 id="Logo_Name">Maple Swap</h1>
+    <h1 id="Logo_Name">~ U ~ M ~ I ~ A ~ K ~</h1>
     <div id="head_image">
-      <img id="maple_leaf" src="images/logo.png" alt="Maple Leaf" />
-      <p id="tagline">Buy Canada Proud</p>
+<!--      <img id="maple_leaf" src="images/brand_logo.png" alt="UMIAK" />
+<!--      <p id="tagline">Buy Canada Proud</p> -->
     </div>
   </div>
 
@@ -19,7 +24,9 @@
     <button id="searchBtn" title="Search">🔍</button>
     <button id="settingsBtn" title="Settings">⚙</button>
   </div>
-
+    </div>
+    
+        <div class="big-bg">
   <div id="resultSection" style="display:none;">
     <div id="productInfo">
       <img id="productImage" src="" alt="Product image" />
@@ -53,6 +60,7 @@
       <a id="buyNow" class="buy-button" href="#" target="_blank">Buy Now</a>
     </div>
   </div>
+        </div>
 
   <div id="message" style="display:none;"></div>
   <script src="popup.js"></script>
