--- a/popup.html
+++ b/popup.html
@@ -14,15 +14,14 @@
   <div id="head_element">
     <h1 id="Logo_Name">~ U ~ M ~ I ~ A ~ K ~</h1>
     <div id="head_image">
-<!--      <img id="maple_leaf" src="images/brand_logo.png" alt="UMIAK" />
-<!--      <p id="tagline">Buy Canada Proud</p> -->
+
     </div>
   </div>
 
   <div id="top-bar">
     <input type="text" id="searchInput" placeholder="Search product..." />
     <button id="searchBtn" title="Search">🔍</button>
-    <button id="settingsBtn" title="Settings">⚙</button>
+    <button id="settingsBtn" title="Settings">👤</button>
   </div>
     </div>
     
