Removed boat background

--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
   </div>
     </div>
     
-        <div class="big-bg">
+        <div>
   <div id="resultSection" style="display:none;">
     <div id="productInfo">
       <img id="productImage" src="" alt="Product image" />
