--- a/options.html
+++ b/options.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Frijole&family=Gravitas+One&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-<title>Umiak: Your Impact Dashboard</title>
+  <title>Maple Swap: Your Impact Dashboard</title>
   <link rel="stylesheet" href="popup.css" />
   <link rel="stylesheet" href="options.css" />
 </head>
 <body>
   <div class="dashboard">
-    <h1>Umiak: Your Impact Dashboard</h1>
+    <h1>Maple Swap: Your Impact Dashboard</h1>
 
     <!-- Medals Section -->
     <section class="medals-section">
